--- a/todo-list/todo.css
+++ b/todo-list/todo.css
@@ -6,24 +6,40 @@
 }
 
 .container {
-  width: 60%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  /* text-align: center; */
-  padding: 5%;
+  width: 350px;
+  padding: 40px 50px;
+  margin: 150px auto 0;
+  background-color: white;
+  box-shadow: 10px 10px 10px #c1c0b9;
 }
 
 .date-todo,
 .list {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  height: 4rem;
 }
-
+.todo {
+  color: #50e3a4;
+  font: italic 700 35px "Roboto Condensed";
+  letter-spacing: -0.5px;
+}
 .date {
   display: flex;
+  color: #333;
+  font-family: "Bellota";
 }
 
 .day {
-  font-size: xx-large;
+  margin-right: 5px;
+  font-weight: 700;
+  font-size: 40px;
+}
+.month {
+  font-family: "Roboto";
+  font-size: 14px;
+}
+.year {
+  line-height: 1;
 }
