--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ body {
 }
 * {
   box-sizing: border-box;
+  /* border: 1px solid brown; */
 }
 b,
 strong {
@@ -251,6 +252,21 @@ h3 {
   padding: 2px 7px;
   background-color: #ffca28;
 }
+.file_link td .category.react {
+  padding: 2px 7px;
+  background-color: blue;
+}
+
+.file_link td .category.next {
+  padding: 2px 7px;
+  background-color: black;
+}
+.file_link td .category.svg {
+  margin-left: 0px;
+  height: 20px;
+  width: 20px;
+}
+
 .file_link td a {
   color: #a69eb0;
 }
@@ -310,6 +326,29 @@ main {
   border-radius: 100%;
   background-color: #a69eb0;
 }
+.slider {
+  height: 500px;
+  padding-bottom: 80px;
+  background-color: black;
+}
+
+.img-div {
+  display: flex;
+  height: 400px;
+  width: 100%;
+  justify-content: center;
+  border: 2px solid black;
+  background-color: black;
+}
+
+.desc {
+  height: 20px;
+  margin: 20px;
+}
+.button-container {
+  display: flex;
+}
+
 .portfolio {
   padding-bottom: 80px;
 }
@@ -513,3 +552,16 @@ footer h2::after {
     display: none;
   }
 }
+
+/* ul {
+  padding: 0;
+} */
+/* ul li {
+  display: inline-block;
+  width: 5px;
+  height: 5px;
+  border: 1px solid black;
+  border-radius: 10px;
+  background-color: black;
+  margin: 5px;
+} */
