--- a/video/style.css
+++ b/video/style.css
@@ -555,6 +555,21 @@ footer {
   }
 }
 @media screen and (max-width: 720px) {
+  .who {
+    font-size: 30px;
+    padding: 10px;
+  }
+
+  .users li {
+    margin: 5px;
+    width: 50px;
+    height: 50px;
+  }
+
+  .users li > a > img {
+    border-radius: 2px;
+  }
+
   .nav-text {
     display: none;
   }
