--- a/video/style.css
+++ b/video/style.css
@@ -669,9 +669,10 @@ footer {
   }
   /*  */
   footer {
-    bottom: 0;
-    width: 100%;
-    padding: 0 100px;
+    text-align: center;
+  }
+  .social-links {
+    justify-content: center;
   }
   .sitemap {
     flex-direction: column;
