--- a/video/style.css
+++ b/video/style.css
@@ -192,10 +192,6 @@ nav {
 
 /* main */
 
-.main-items {
-  padding-bottom: 0%;
-}
-
 .movie {
   position: absolute;
   top: 0;
@@ -667,7 +663,14 @@ footer {
     width: 20%;
     font-size: x-small;
   }
-  /*  */
+  .main_items {
+    /* padding-bottom: 5%; */
+    margin: 0;
+  }
+  .category-text {
+    font-size: small;
+    /* margin-top: 10px; */
+  }
   footer {
     text-align: center;
   }
@@ -675,11 +678,14 @@ footer {
     justify-content: center;
   }
   .sitemap {
+    flex-wrap: wrap;
     flex-direction: column;
   }
 
   .service-code-container {
     text-align: center;
+
+    width: 100%;
   }
 }
 
