--- a/video/style.css
+++ b/video/style.css
@@ -660,16 +660,15 @@ footer {
   }
 
   .service-code {
-    width: 20%;
-    font-size: x-small;
+    width: 50%;
+    font-size: small;
   }
   .main_items {
-    /* padding-bottom: 5%; */
     margin: 0;
   }
   .category-text {
-    font-size: small;
-    /* margin-top: 10px; */
+    font-size: medium;
+    margin: 10px 0;
   }
   footer {
     text-align: center;
@@ -684,8 +683,6 @@ footer {
 
   .service-code-container {
     text-align: center;
-
-    width: 100%;
   }
 }
 
