--- a/video/style.css
+++ b/video/style.css
@@ -384,7 +384,7 @@ nav {
 
 .modal-item {
   width: calc(100% / 3);
-  margin-bottom: 10px;
+  padding: 10px;
 }
 
 .pic-container {
@@ -449,27 +449,27 @@ nav {
   border-radius: 3px;
 }
 
-.main_items {
+.main-items {
   padding-bottom: 5%;
   margin: 10px 40px 0px 0px;
 }
 .category-text {
   margin-top: 10px;
 }
-.main_items button {
+.main-items button {
+  /* display: none; */
   position: absolute;
-  top: 0px;
+  top: 0;
   height: 100%;
   /* padding: 20px; */
   /* top: calc(50% - 36px); */
-
   border: 0;
-  color: gray;
-  background-color: black;
-  font-size: xx-large;
+  color: rgb(202, 200, 200);
+  background-color: transparent;
+  font-size: 50px;
 }
 
-#main_items > .item {
+#main-items > .item {
   width: 100px;
   height: 100px;
 }
@@ -485,6 +485,7 @@ nav {
   border-radius: 3px 0 0 3px;
   padding: 10px;
 }
+
 .next {
   opacity: 0.9;
   right: 0px;
@@ -657,8 +658,8 @@ footer {
 
   .modal-item {
     width: calc(100% / 1);
-
-    /* padding: 10px; */
+    margin-bottom: 10px;
+    padding: 0px;
   }
 
   .service-code {
