--- a/video/style.css
+++ b/video/style.css
@@ -2,7 +2,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* border: 1px solid red; */
 }
 
 body {
@@ -201,15 +200,18 @@ nav {
   width: 100%;
   height: 100%;
 }
+
 .movie video {
   width: 100%;
+  height: fit-content;
 }
 
 .movie-title {
-  position: absolute;
-  top: 40%;
+  /* position: absolute;
+  top: 25em;
   left: 3.5%;
-  right: 60%;
+  right: 0%; */
+  margin-top: 30%;
 }
 
 .movie-title p {
@@ -220,12 +222,9 @@ nav {
 
 .movie-desc {
   padding-top: 20px;
+  padding-right: 50%;
   font-family: "Courier New", Courier, monospace;
   color: white;
-}
-
-.buttons {
-  padding-top: 20px;
 }
 
 .playButton,
@@ -275,7 +274,7 @@ nav {
   padding-left: 3.5%;
 }
 .movieList {
-  margin-top: 550px;
+  margin-top: 10%;
 }
 
 .category-text {
@@ -540,46 +539,11 @@ footer {
   color: gray;
   font-size: x-small;
 }
-/* 
-@media screen and (max-width: 1200px) {
-  .movie-title {
-    top: 25%;
-  }
-
+@media screen and (max-width: 1024px) {
   .movie-desc {
-    visibility: hidden;
+    padding-right: 30%;
   }
-  .buttons {
-    display: flex;
-    position: absolute;
-    top: 50%;
-  }
-  .movieList {
-    margin-top: 400px;
-  }
-
-  .modal {
-    width: 500px;
-  }
-
-  .video-wrapper video {
-    width: 500px;
-  }
-
-  .video-resume {
-    top: 150px;
-    left: 10px;
-  }
-
-  .modal-item {
-    width: calc(100% / 2);
-    padding: 15px;
-  }
-  .service-code {
-    width: 20%;
-    font-size: x-small;
-  }
-} */
+}
 @media screen and (max-width: 720px) {
   .who {
     font-size: 30px;
@@ -607,22 +571,8 @@ footer {
     margin-top: 40px;
   }
 
-  .movie-title {
-    top: 15%;
-  }
-
   .movie-title p {
     font-size: 38px;
-  }
-
-  .movie-desc {
-    visibility: hidden;
-  }
-  .buttons {
-    top: 20%;
-  }
-  .movieList {
-    margin-top: 230px;
   }
 
   .modal {
@@ -634,6 +584,7 @@ footer {
 
   .video-wrapper video {
     width: 100%;
+    height: auto;
   }
 
   .video-resume {
