--- a/style2.css
+++ b/style2.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  /* border: 1px solid red; */
 }
 html {
   font-size: 62.5%;
@@ -74,8 +75,9 @@ body {
 
 .section-hero {
   /* background-color: #eae8e8; */
-  padding-top: 4rem;
-  /* padding: 4.8rem 0 9.6rem 0; */
+  background-color: #000;
+  /* padding-top: 4rem; */
+  padding: 4.8rem 0 1.6rem 0;
 }
 
 .hero {
@@ -92,11 +94,17 @@ body {
   font-size: 2rem;
   line-height: 1.6;
   margin-bottom: 4.8rem;
+  color: #fff;
 }
 
+.hero-img-box {
+  text-align: center;
+
+}
 
 .hero-img {
-  width: 100%;
+  width: 80%;
+  border-radius: 50px;
 }
 
 
@@ -148,5 +156,44 @@ body {
 }
 
 .step-img{
-  width:50%;
+  width:100%;
+}
+
+.about{
+/* padding-top: 3.5rem; */
+}
+
+.about-me-container{
+  border: 5px solid black;
+  border-radius: 25px;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+}
+.about-me-pic{
+  /* width: 100px; */
+}
+
+.me {
+   width: 50rem;
+   height: 50rem;
+   border-radius: 20px 0 0 20px;
+}
+.about-me-discription{
+  /* display: flex; */
+  font-size: large ;
+  line-height: 2;
+  padding: 4rem;
+}
+
+.about-me-discription p:last-child{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.blog-icon{}
+
+.about-me-job{
+
 }
