--- a/general.css
+++ b/general.css
@@ -67,7 +67,8 @@ Greys:
 .heading-primary,
 .heading-secondary{
   line-height: 1.05;
-  color: #333;
+  color: #5e5858;
+  /* color: #fff; */
   letter-spacing: -0.5px;
 }
 
