--- a/style.css
+++ b/style.css
@@ -1,567 +1,209 @@
-/* * {
-  font-size: x-large;
-  font-family: Sora;
-  background-color: black;
-  color: aliceblue;
-  border: 1px solid pink;
-}
-
-nav .nav-list {
-  list-style: none;
-}
-
-nav .nav {
-  display: flex;
-  flex-direction: row;
-}
-
-.main {
-}
-.intro {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.js-project {
-  border: 1px solid pink;
-}
-.resume {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.projects {
-  display: flex;
-  flex-direction: column;
-
-}
-
-.js-projects {
-  display: flex;
-  flex-direction: column;
-
-}
-
-.contacts {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-.contact img {
-  height: 50px;
-  width: 50px;
-} */
-
-@charset "utf-8";
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400,500,700&display=swap&subset=korean");
-
-/*reset*/
-body {
-  font: normal 18px "Roboto", "Noto Sans KR";
-  font-weight: 400;
-  line-height: 1;
-  color: #333;
-  background-color: #fff;
-  margin: 0;
-  padding: 0;
-}
 * {
-  box-sizing: border-box;
-  /* border: 1px solid brown; */
-}
-b,
-strong {
-  font-weight: 700;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size: 1em;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-div,
-p,
-dl,
-dt,
-dd,
-ul,
-ol,
-li,
-form,
-fieldset,
-blockquote,
-address,
-table,
-thead,
-tbody,
-tfoot,
-tr,
-td,
-caption {
+  padding: 0;
   margin: 0;
-  padding: 0;
+  box-sizing: border-box;
+  /* border: 1px solid red; */
 }
-table {
-  width: 100%;
-  border-collapse: collapse;
+html {
+  font-size: 62.5%;
 }
-ul,
-ol {
-  list-style: none;
-}
-a {
-  color: #333;
-  text-decoration: none;
-}
-img {
-  vertical-align: top;
-}
-em {
-  font-style: normal;
-}
-i {
-  font-style: normal;
-}
-address {
-  font-style: normal;
-}
-button {
-  outline: 0;
-}
-
-/* common */
-.inner {
-  position: relative;
-  max-width: 1290px;
-  width: 100%;
-  padding: 0 20px;
-  margin: 0 auto;
-}
-h2 {
-  position: relative;
-  padding: 60px 0;
-  font-size: 40px;
-  font-weight: 300;
-  letter-spacing: -3px;
-}
-h2::after {
-  position: absolute;
-  top: 50%;
-  left: 235px;
-  right: 0;
-  content: "";
-  height: 2px;
-  background-color: #a69eb0;
-  transform: translateY(-50%);
-}
-h3 {
-  font-size: 26px;
+body {
+  font-family: "Rubik",sans-serif;
+  line-height: 1;
   font-weight: 400;
-  letter-spacing: -1px;
-}
-.num_portfolio {
-  margin-right: 3px;
-  color: #a69eb0;
-  font-size: 40px;
-  font-weight: 300;
-}
-.summary {
-  line-height: 1.3;
-  margin: 37px 0;
-  font-size: 20px;
-  font-weight: 300;
-  word-break: keep-all;
-}
-.point > li + li {
-  margin-top: 14px;
-}
-.point > li > span {
-  position: relative;
-  line-height: 1.3;
-  padding-left: 20px;
-  font-size: 17px;
-  word-break: keep-all;
-}
-.point > li > span::before {
-  position: absolute;
-  top: 6px;
-  left: 0;
-  content: "";
-  width: 6px;
-  height: 6px;
-  border-radius: 100%;
-  background-color: #a69eb0;
-}
-.btn_area {
-  margin: 36px 0;
-  text-align: center;
-}
-.btn_area .btn_goto {
-  display: inline-block;
-  width: 80px;
-  padding: 7px 0;
-  border-radius: 16px;
-  background-color: #a69eb0;
-  color: #fff;
-  letter-spacing: -1px;
-}
-.btn_area .btn_goto:hover {
-  background-color: #766d81;
-}
-.file_link {
-  font-size: 15px;
-}
-.file_link th {
-  padding: 11px;
-  border-bottom: 1px solid #e0e0e0;
-  background-color: #f0f0f0;
-}
-.file_link th#col1 {
-  width: 150px;
-  padding-left: 25px;
-}
-.file_link td {
-  padding: 11px;
-  border-bottom: 1px solid #e0e0e0;
-}
-.file_link td .category {
-  padding: 3px;
-  margin-left: 14px;
-  border-radius: 4px;
-  color: #fff;
-  font-size: 12px;
-}
-.file_link td .category.html {
-  background-color: #ff702a;
-}
-.file_link td .category.css {
-  background-color: #00bfdd;
-}
-.file_link td .category.js {
-  padding: 2px 7px;
-  background-color: #ffca28;
-}
-.file_link td .category.react {
-  padding: 2px 7px;
-  background-color: blue;
+  color: #555;
 }
 
-.file_link td .category.next {
-  padding: 2px 7px;
-  background-color: black;
-}
-.file_link td .category.svg {
-  margin-left: 0px;
-  height: 20px;
-  width: 20px;
-}
 
-.file_link td a {
-  color: #a69eb0;
-}
-.file_link td a:hover {
-  color: #766d81;
-}
-.hidden_text {
-  position: absolute;
-  display: inline-block;
-  text-indent: -9999px;
-}
-
-/* main */
-main {
-  position: relative;
-  margin-bottom: 250px;
-  background-color: #fff;
-  z-index: 100;
-}
-.skills {
-  background-color: #f0f0f0;
-}
-.skills .skill_list {
+/*********************/
+/*  HEADER */
+/*********************/
+.header{
   display: flex;
-  justify-content: center;
-  padding-bottom: 80px;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #000;
+  height: 9.6rem;
+  padding: 0 4.8rem;
 }
-.skills .skill_list > li {
-  width: 25%;
-  color: #766d81;
-  font-size: 26px;
-  letter-spacing: -1px;
-}
-.skills .skill_list > li + li {
-  margin-left: 15px;
-}
-.skills .skill_list > li > ul {
-  margin-top: 30px;
-}
-.skills .skill_list > li > ul > li + li {
-  margin-top: 18px;
-}
-.skills .skill_list > li > ul > li > span {
-  position: relative;
-  line-height: 1.3;
-  padding-left: 20px;
-  color: #333;
-  font-size: 17px;
-}
-.skills .skill_list > li > ul > li > span::before {
-  position: absolute;
-  top: 7px;
-  left: 0;
-  content: "";
-  width: 6px;
-  height: 6px;
-  border-radius: 100%;
-  background-color: #a69eb0;
-}
-.slider {
-  height: 100px;
-  padding-bottom: 80px;
-  background-color: black;
+.logo{
+  height: 80%;
 }
 
-.img-div {
-  display: flex;
-  height: 400px;
-  width: 100%;
-  justify-content: center;
-  border: 2px solid black;
-  background-color: black;
-}
+/*********************/
+/*  Navnigation */
+/*********************/
 
-.desc {
-  height: 20px;
-  margin: 20px;
-}
-.button-container {
+.main-nav-list{
+  list-style: none;
   display: flex;
+  align-items: center;
+  gap: 3.2rem;
 }
-
-.portfolio {
-  padding-bottom: 80px;
-}
-.portfolio h2 {
-  padding: 80px 0;
-}
-.portfolio h2::after {
-  left: 318px;
-}
-.portfolio .portfolio_list > li {
-  display: flex;
-}
-.portfolio .portfolio_list > li + li {
-  margin-top: 200px;
-}
-.portfolio .portfolio_list > li .img_area {
-  width: 60%;
-}
-.portfolio .portfolio_list > li:nth-child(odd) .img_area {
-  margin-right: 8%;
-}
-.portfolio .portfolio_list > li:nth-child(even) .img_area {
-  margin-left: 8%;
-  order: 2;
-}
-.portfolio .portfolio_list > li img {
-  width: 100%;
-}
-.portfolio .portfolio_list > li .portfolio_cont {
-  width: 40%;
-  padding-top: 3%;
-}
-.portfolio .portfolio_list > li:nth-child(6) .portfolio_cont {
-  padding-top: 0;
-}
-.portfolio .portfolio_list > li:nth-child(7) .portfolio_cont {
-  padding-top: 0;
-}
-.portfolio .portfolio_list > li:nth-child(9) .portfolio_cont {
-  padding-top: 0;
-}
-.btn_top {
-  visibility: hidden;
-  position: fixed;
-  bottom: 24px;
-  right: 32px;
-  width: 58px;
-  height: 58px;
-  border: 0;
-  background-color: transparent;
-  text-align: center;
-  color: #fff;
-  font-size: 15px;
+.main-nav-link:link,
+.main-nav-link:visited{
+  text-decoration: none;
+  color:#fff;
   font-weight: 500;
-  cursor: pointer;
-}
-.btn_top::before {
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: "";
-  width: 100%;
-  height: 100%;
-  border-radius: 5px;
-  background-color: #a69eb0;
-  transition: all 0.2s linear;
-}
-.btn_top::after {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
-  content: "TOP";
-  transform: translateY(-50%);
-}
-.btn_top:hover::before {
-  border-radius: 12px;
-  background-color: #766d81;
-  transform: rotate(-45deg) scale(0.8, 0.8);
+  font-size: 1.8rem;
+  transition: all 0.3s;
 }
 
-/* footer */
-footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  padding: 20px 0 50px;
-  background-color: #f0f0f0;
+.main-nav-link:hover,
+.main-nav-link:active{
+  color:#826a6a;
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited{
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  color: #fff;
+  background-color: #000;
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active{
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  color: #fff;
+  background-color: #c4bdbd;
+}
+
+/*********************/
+/*  HERO-SECTION */
+/*********************/
+
+.section-hero {
+  /* background-color: #eae8e8; */
+  background-color: #000;
+  /* padding-top: 4rem; */
+  padding: 4.8rem 0 1.6rem 0;
+}
+
+.animate{
+  color: rgb(234, 144, 34); 
+}
+.typed-cursor{
+  color: rgb(234, 144, 34); 
+}
+
+.hero {
+  max-width: 130rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 9.6rem;
+  align-items: center;
+}
+
+.hero-description {
+  font-size: 2rem;
+  line-height: 1.6;
+  margin-bottom: 4.8rem;
+  color: #fff;
+}
+
+.hero-img-box {
   text-align: center;
-}
-footer h2 {
-  padding: 30px 0;
-  font-size: 33px;
-  letter-spacing: -1px;
-}
-footer h2::after {
-  display: none;
-}
-.contact_list > li i {
-  margin-right: 7px;
-}
-.contact_list > li + li {
-  margin-top: 15px;
+
 }
 
-/* 814 이하 */
-@media screen and (max-width: 814px) {
-  /* common */
-  h2 {
-    padding: 40px 0;
-  }
-
-  /* main */
-  .skills .skill_list {
-    display: block;
-    padding-bottom: 60px;
-    text-align: center;
-  }
-  .skills .skill_list > li {
-    width: 100%;
-  }
-  .skills .skill_list > li + li {
-    margin-top: 60px;
-    margin-left: 0;
-  }
-  .skills .skill_list > li > ul {
-    margin-top: 20px;
-  }
-  .portfolio .portfolio_list > li {
-    display: block;
-    text-align: center;
-  }
-  .portfolio .portfolio_list > li + li {
-    margin-top: 100px;
-  }
-  .portfolio .portfolio_list > li .img_area {
-    width: 100%;
-  }
-  .portfolio .portfolio_list > li:nth-child(odd) .img_area {
-    margin-right: 0;
-  }
-  .portfolio .portfolio_list > li:nth-child(even) .img_area {
-    margin-left: 0;
-  }
-  .portfolio .portfolio_list > li .portfolio_cont {
-    width: 100%;
-    padding-top: 8%;
-  }
-  .portfolio .portfolio_list > li:nth-child(6) .portfolio_cont {
-    padding-top: 8%;
-  }
-  .portfolio .portfolio_list > li:nth-child(7) .portfolio_cont {
-    padding-top: 8%;
-  }
-  .portfolio .portfolio_list > li:nth-child(9) .portfolio_cont {
-    padding-top: 8%;
-  }
+.hero-img {
+  width: 80%;
+  border-radius: 50px;
 }
 
-/* 414 이하 */
-@media screen and (max-width: 414px) {
-  /* common */
-  h2 {
-    font-size: 28px;
-  }
-  h2::after {
-    left: 160px;
-  }
-  h3 {
-    font-size: 23px;
-  }
-  .num_portfolio {
-    font-size: 37px;
-  }
-  .summary {
-    margin: 30px 0;
-    font-size: 18px;
-  }
-  .point > li > span {
-    font-size: 16px;
-  }
 
-  /* main */
-  .skills .skill_list > li {
-    font-size: 22px;
-  }
-  .skills .skill_list > li + li {
-    margin-top: 52px;
-  }
-  .skills .skill_list > li > ul > li > span {
-    font-size: 16px;
-  }
-  .portfolio h2 {
-    padding: 60px 0;
-  }
-  .portfolio h2::after {
-    left: 215px;
-  }
-  .btn_top {
-    display: none;
-  }
+/*************************/
+/*  SKILLS SECTION */
+/*************************/
+.section-skills{
+  /* background-color: #040303; */
 }
 
-/* ul {
-  padding: 0;
-} */
-/* ul li {
-  display: inline-block;
-  width: 5px;
-  height: 5px;
-  border: 1px solid black;
-  border-radius: 10px;
-  background-color: black;
-  margin: 5px;
-} */
+.skills-images{
+  display: flex;
+}
+
+.skill-img{
+  width: 8rem;
+  height: 8rem;
+  margin: 9.8rem 2rem;
+  /* border: 1px solid red; */
+
+}
+
+
+/*************************/
+/*  HOW IT WORKS SECTION */
+/*************************/
+
+.section-how{
+  padding:9.6px 0;
+  /* background-color: orangered; */
+}
+
+.step-number{
+  font-size: 9.8rem;
+  font-weight: 600;
+  color: #ddd;
+}
+
+.step-description{
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
+
+.step-img-box{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.step-img{
+  width:100%;
+}
+
+.about{
+/* padding-top: 3.5rem; */
+}
+
+.about-me-container{
+  border: 5px solid black;
+  border-radius: 25px;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+}
+.about-me-pic{
+  /* width: 100px; */
+}
+
+.me {
+   width: 50rem;
+   height: 50rem;
+   border-radius: 20px 0 0 20px;
+}
+.about-me-discription{
+  
+  font-size: large ;
+  line-height: 2;
+  padding: 4rem;
+}
+
+.about-link p{
+  color: rgb(72, 72, 220);
+  font-weight: bold;
+}
+
+.blog-icon{
+  margin-left: 20px;
+}
+
+.about-link{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
