--- a/style.css
+++ b/style.css
@@ -210,6 +210,40 @@ body {
 
 
 
+.slick-dots {
+  display: flex;
+	justify-content: center;
+
+	
+	margin: 0;
+	padding: 1rem 0;
+	
+	list-style-type: none;
+	
+		li {
+			margin: 0.5rem 0.75rem;
+		}
+	
+		button {
+			display: block;
+			width: 1rem;
+			height: 1rem;
+			padding: 0;
+			
+			border: none;
+			border-radius: 100%;
+			background-color: rgb(217, 217, 234);
+			
+			text-indent: -9999px;
+		}
+	
+		li.slick-active button {
+			background-color: gray;
+		}
+	
+}
+
+
 /* footer */
 footer {
   /* position: fixed; */
