--- a/style.css
+++ b/style.css
@@ -25,6 +25,11 @@ body {
   background-color: #000;
   height: 9.6rem;
   padding: 0 4.8rem;
+
+   /* Because we want header to be sticky later */
+   height: 9.6rem;
+   padding: 0 4.8rem;
+   position: relative;
 }
 .logo{
   height: 80%;
@@ -115,6 +120,11 @@ body {
   border-radius: 50px;
 }
 
+.social-media{
+  display: flex;
+  gap:10px
+}
+
 
 /*************************/
 /*  SKILLS SECTION */
@@ -130,7 +140,7 @@ body {
 .skill-img{
   width: 8rem;
   height: 8rem;
-  margin: 9.8rem 2rem;
+  /* margin: 9.8rem 2rem; */
   /* border: 1px solid red; */
 
 }
@@ -166,8 +176,8 @@ body {
   width:100%;
 }
 
-.about{
-/* padding-top: 3.5rem; */
+.section-about, .section-skills, .section-project {
+  padding-top: 9rem;
 }
 
 .about-me-container{
@@ -241,6 +251,26 @@ body {
 			background-color: gray;
 		}
 	
+}
+
+
+
+/* STICKY NAVIGATION */
+.sticky .header {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 8rem;
+  padding-top: 0;
+  padding-bottom: 0;
+  background-color: #000;
+  z-index: 999;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+}
+
+.sticky .section-hero {
+  margin-top: 9.6rem;
 }
 
 
