--- a/queries.css
+++ b/queries.css
@@ -79,6 +79,11 @@
   .me {
     border-radius: 20px;
  }
+
+ .social-media{
+  justify-content: center;
+  align-items: center;
+ }
   .hero{
     grid-template-columns: 1fr;
     padding: 0 8rem;
@@ -231,6 +236,10 @@
     grid-column: span 2;
     margin-bottom: 3.2rem;
   }
+
+  .me {
+    width: 30rem;
+    height: 30rem;}
 }
 
 /**************************/
