--- a/style.css
+++ b/style.css
@@ -75,6 +75,28 @@ body {
   background-color: #c4bdbd;
 }
 
+
+/* MOBILE */
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+
+  display: none;
+}
+
+
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #fff;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
+}
+
+
 /*********************/
 /*  HERO-SECTION */
 /*********************/
@@ -197,7 +219,6 @@ body {
    border-radius: 20px 0 0 20px;
 }
 .about-me-discription{
-  
   font-size: large ;
   line-height: 2;
   padding: 4rem;
