--- a/queries.css
+++ b/queries.css
@@ -50,6 +50,11 @@
     gap: 3.2rem;
   }
 
+  .main-nav-link:link,
+  .main-nav-link:visited{
+    color: #000;
+  }
+
   .hero {
     gap: 4.8rem;
   }
