responsive mobile menu added

--- a/general.css
+++ b/general.css
@@ -44,7 +44,7 @@ Greys:
   /* 1140px */
   max-width: 120rem;
   margin: 0 auto;
-  padding: 3.2rem;
+  padding: 0 3.2rem 3.2rem 3.2rem;
 }
 .grid{
   display: grid;
