--- a/style.css
+++ b/style.css
@@ -169,8 +169,6 @@ body {
   width: 8rem;
   height: 8rem;
   /* margin: 9.8rem 2rem; */
-  /* border: 1px solid red; */
-
 }
 
 
@@ -198,10 +196,15 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  /* border: #000 solid 3px; */
+ 
 }
 
 .step-img{
   width:100%;
+  height: 100%;
+  /* border: #000 solid 1px; */
+  border-radius: 20px;
 }
 
 .section-about, .section-skills, .section-project {
