--- a/queries.css
+++ b/queries.css
@@ -245,7 +245,8 @@
 
   .me {
     width: 30rem;
-    height: 30rem;}
+    height: 30rem;
+  }
 }
 
 /**************************/
@@ -328,6 +329,11 @@
     font-size: small;
     line-height: 1.5;
     padding: 3rem ;
+  }
+
+  .me {
+    width: 20rem;
+    height: 20rem;
   }
 
 }
